# cmsplugin-blocks

./: .gitignore  CHANGELOG.rst  HISTORY.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  setup.py  sphinx_reload.py
.github/ISSUE_TEMPLATE/: bug_report.md
cmsplugin_blocks/: __init__.py  admin.py  apps.py  choices_helpers.py  cms_plugins.py  defaults.py  exceptions.py  forms.py  managers.py  modelfields.py  models.py  settings.py  utils.py  widgets.py
cmsplugin_blocks/admin/: __init__.py  accordion.py  album.py  feature.py  slider.py
cmsplugin_blocks/compat/: cms.py  editor_widget.py
cmsplugin_blocks/contrib/: disk.py  django_configuration.py
cmsplugin_blocks/factories/: __init__.py  accordion.py  album.py  card.py  container.py  feature.py  hero.py  slider.py  user.py  utils.py
cmsplugin_blocks/forms/: __init__.py  accordion.py  album.py  banner.py  card.py  container.py  diptych.py  establishment_opening.py  feature.py  hero.py  slider.py
cmsplugin_blocks/locale/: django.pot
cmsplugin_blocks/locale/en/LC_MESSAGES/: django.po
cmsplugin_blocks/locale/fr/LC_MESSAGES/: django.mo  django.po
cmsplugin_blocks/migrations/: 0001_initial.py  0002_add_slide_item_order.py  0002_album_albumitem.py  0002_rename_diptych_background_field.py  0003_add_establishment_opening.py  0003_slideitem_title.py  0004_change_image_as_filefield_.py  0005_v1-0-0_changes.py  0006_alter_card_content.py  0007_add_image_alt.py  0008_refactoring_features.py  0008_refactoring_features_for_card_hero.py  0009_refactoring_features_for_container_album_slider.py  0010_rename_feature_plugins.py  0011_accordion_alter_feature_plugins_accordionitem_and_more.py  0012_accordion_add_more_options.py  0013_alter_accordion_title.py  0013_card_link_name.py
cmsplugin_blocks/models/: __init__.py  accordion.py  album.py  banner.py  card.py  container.py  diptych.py  establishment_opening.py  feature.py  hero.py  mixins.py  slider.py
cmsplugin_blocks/plugins/: accordion.py  album.py  card.py  container.py  hero.py  slider.py
cmsplugin_blocks/static/cmsplugin_blocks/css/: fileinputbutton.css
cmsplugin_blocks/static/cmsplugin_blocks/js/: fileinputbutton.js
cmsplugin_blocks/templates/cmsplugin_blocks/: banner.html  diptych.html  establishment_opening.html
cmsplugin_blocks/templates/cmsplugin_blocks/accordion/: default.html  test.html
cmsplugin_blocks/templates/cmsplugin_blocks/admin/: albumitem_edit_tabular.html
cmsplugin_blocks/templates/cmsplugin_blocks/album/: default.html  test.html
cmsplugin_blocks/templates/cmsplugin_blocks/card/: default.html  test.html
cmsplugin_blocks/templates/cmsplugin_blocks/container/: default.html  test.html
cmsplugin_blocks/templates/cmsplugin_blocks/fileinputbutton/: clearable_file_input.html  file.html
cmsplugin_blocks/templatetags/: smart_format.py
cmsplugin_blocks/utils/: __init__.py  archive.py  factories.py  smart_format.py  tests.py  validators.py
cmsplugin_blocks/views/: admin_mixins.py  feature.py
docs/: Makefile  changelog.rst  conf.py  development.rst  django_settings.py  dummy_settings.py  editors.rst  index.rst  install.rst  overview.rst  requirements.txt  settings.rst  smart_format.rst  sphinx_reload.py
docs/plugins/: album.rst  card.rst  container.rst  hero.rst  index.rst  slider.rst
docs/references/: accordion.rst  album.rst  card.rst  container.rst  contrib.rst  feature.rst  hero.rst  index.rst  slider.rst
frontend/: package-lock.json  package.json
frontend/scss/: main.scss
sandbox/: urls.py
sandbox/locale/: django.pot
sandbox/locale/en/LC_MESSAGES/: django.po
sandbox/settings/: base.py  demo.py  documentation.py  tests.py
sandbox/templates/: skeleton.html
sandbox/templates/menus/: flat.html
sandbox/templates/pages/: default.html  test.html
sass/: boussole.json
sass/scss/: fileinputbutton.scss
sass/scss/admin/: album.scss  card.scss  hero.scss  slider.scss
sass/scss/tools/: _include-fileinputbutton.scss  _include-media.scss  _reset.scss
tests/: 002_utils_valid_filesize.py  003_smart_format.py  005_utils_store_images_from_zip.py  100_element_card.py  101_element_hero.py  102_element_slider.py  103_element_album.py  conftest.py  utils.py
tests/0000_utils/: 0001_valid_filename.py  0002_valid_filesize.py  0003_validate_css_classname.py  0004_validate_zip.py  0005_store_images_from_zip.py  0006_create_image_file.py  0007_contrib_django_configuration.py
tests/001_utils/: 03_smart_format.py  04_validate_zip.py  06_create_image_file.py
tests/0100_models/: 0100_feature.py  0101_card.py  0102_hero.py  0103_slider.py  0104_album.py  0105_container.py  0106_accordion.py
tests/010_models/: 011_card.py  012_hero.py  013_slider.py  014_album.py
tests/0200_factory/: 0200_feature.py  0201_card.py  0202_hero.py  0203_slider.py  0204_album.py  0205_container.py  0206_accordion.py
tests/020_factory/: 021_card.py  022_hero.py  023_slider.py  024_album.py
tests/0300_form/: 0300_feature.py  0301_card.py  0302_hero.py  0303_slider.py  0304_album.py  0305_container.py  0306_accordion.py
tests/030_form/: 031_card.py  032_hero.py  033_slider.py  034_album.py
tests/0400_admin/: 0400_feature.py
tests/0400_plugin/: 0401_card.py  0402_hero.py  0403_slider.py
tests/040_plugin/: 041_card.py  042_hero.py  043_slider.py  044_album.py
tests/0500_plugin/: 0401_card.py  0402_hero.py  0404_album.py  0501_card.py  0502_hero.py  0503_slider.py  0504_album.py  0505_container.py  0506_accordion.py
tests/0500_render/: 0501_card.py  0502_hero.py  0504_album.py  0505_container.py
tests/050_render/: 051_card.py  052_hero.py  053_slider.py  054_album.py
tests/0600_render/: 0501_card.py  0601_card.py  0602_hero.py  0603_slider.py  0604_album.py  0605_container.py  0606_accordion.py
tests/060_templatetags/: 061_media_format_filepath.py
tests/data_fixtures/feature_samples/: invalid_plugins.json  invalid_scopes.json  items_not_a_list.json  not_a_dict.json  not_unique.json  some_items_errors.json  valid.json  whitespaces.json
tests/elements/: album.py  card.py  hero.py  slider.py
(+21 files in other folders)
