;;
;; cmsplugin-blocks package
;;
[metadata]
name = cmsplugin-blocks
version = 0.6.0-pre.6
description = A set of DjangoCMS plugins for content structures
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = dthenon@emencia.com
url = https://github.com/emencia/cmsplugin-blocks
license = MIT
keywords = Django, Django-CMS, Structure, Content
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python",
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    django-cms>=3.6
    djangocms-text-ckeditor>=3.6.1
    sorl-thumbnail
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    factory-boy

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py35-django{20,21,22,30}-cms

[testenv]

deps =
    django111: Django>=1.11,<2.0
    django20: Django>=2.0,<2.1
    django21: Django>=2.1,<2.2
    django22: Django>=2.2,<2.3
    django111-cms: django-cms>=3.5,<3.6
    django20-cms: django-cms>=3.6,<3.7
    django21-cms: django-cms>=3.7,<3.8
    django22-cms: django-cms>=3.7,<3.8
    django30-cms: django-cms>=3.7,<3.8

commands =
    pip install -e .[dev]
    pytest -vv tests
