;;
;; cmsplugin-blocks package
;;
[metadata]
name = cmsplugin-blocks
version = 1.3.2-pre.2
description = A set of DjangoCMS plugins for structured contents in CMS pages
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = dthenon@emencia.com
url = https://github.com/emencia/cmsplugin-blocks
project_urls =
    Source Code = https://github.com/emencia/cmsplugin-blocks
    Issue Tracker = https://github.com/emencia/cmsplugin-blocks/issues
    Changelog = https://cmspluginblocks.readthedocs.io/en/latest/history.html
    Documentation = https://cmspluginblocks.readthedocs.io/
license = MIT
keywords = django, django-cms, structure, content
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    django-cms>=3.11.0,<4.0
    djangocms-text-ckeditor>=5.0.1
    django-smart-media>=0.3.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
quality =
    flake8
    tox
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38,310}-django{32,42,50}-cms{311}

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    cms311: django-cms>=3.11.0,<4.0
    py38-django32: backports.zoneinfo

commands =
    pip install -e .[dev]
    pytest -vv tests

[testenv:py38-django50-cms311]
ignore_outcome = true