;;
;; cmsplugin-blocks package
;;
[metadata]
name = cmsplugin-blocks
version = 1.7.0-pre.2
description = A set of DjangoCMS plugins for structured contents in CMS pages
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = dthenon@emencia.com
url = https://github.com/emencia/cmsplugin-blocks
project_urls =
    Source Code = https://github.com/emencia/cmsplugin-blocks
    Issue Tracker = https://github.com/emencia/cmsplugin-blocks/issues
    Changelog = https://cmspluginblocks.readthedocs.io/en/latest/history.html
    Documentation = https://cmspluginblocks.readthedocs.io/
license = MIT
keywords = django, django-cms, structure, content
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    django>=4.0
    django-cms>=3.11.0
    django-smart-media>=0.3.0
packages = find:
zip_safe = True

[options.extras_require]
sandbox =
    djangocms-text>=0.5.1
dev =
    pytest>=7.0
    pytest-django>=4.5.2
    factory-boy>=3.3.0
    pyquery>=2.0.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =
    {py39}-django{40,42}-cms311,
    {py311}-django{42,52}-cms{311,410,500},

[testenv]
deps =
    cms311: django-cms>=3.11.0,<4.0
    cms410: django-cms>=4.1.0,<4.2.0
    cms500: django-cms>=5.0.0,<6.0.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<6.0
    py38-django32: backports.zoneinfo

commands =
    pip install -e .[dev]
    pytest -vv tests
